--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,17 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            //选择要添加的对应cpu类型的.so库。
+            abiFilters "armeabi","armeabi-v7a"
+            // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
+        }
+    }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+            jni.srcDirs=[]
+        }
     }
     buildTypes {
         release {
@@ -67,7 +78,13 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.2.0'
     implementation 'com.aliyun.video.android:upload:1.5.2'
     implementation 'com.wsg:titlebar:1.08'
-    implementation 'cn.jzvd:jiaozivideoplayer:7.0.3'
+    //JiaoZi播放器支持，清晰度切换，倍速播放
+    implementation 'cn.jzvd:jiaozivideoplayer:6.2.7'
+    //ijk播放器
+    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.4'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.4'
+    //EventBus
+    implementation 'org.greenrobot:eventbus:3.1.1'
     implementation project(":AliyunSdk-RC")
 
 }
